@@ -46,7 +46,7 @@ use EBox::Gettext;
 % }
     server signing = auto
 
-    log level = 3
+    log level = 2
     log file = /var/log/samba/samba.log
 
 % unless ($print) {
